Rp body & html target with root id to fix mobile overflow

--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,9 @@
   margin: 0%;
 }
 
-body,
-html {
+#root {
   overflow-x: hidden;
+  position: relative;
 }
 
 .benefits-form {
